# task-planner-rocket

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2019-07-25-024013_add_plans_table/: down.sql  up.sql
migrations/2019-10-06-224640_add_task_due_date/: down.sql  up.sql
migrations/20190724112400_create_plans_table/: up.sql
src/: main.rs  plan.rs  task.rs  tests.rs  util.rs
static/: index.html.tera  today.html.tera
