[package]
name = "task-planner"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
rocket = { path = "../rocket/core/lib" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4"
chrono = { version = "0.4.9", features = ["serde"] }
log = "0.4"

[dev-dependencies]
parking_lot = { version = "0.8", features = ["nightly"] }
rand = "0.6"

[dependencies.rocket_contrib]
path = "../rocket/contrib/lib"
default_features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve"]
